--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,6 +30,8 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+collections:
+  - medium_posts
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
