--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Author
 author:
-  name             : "Preeti Pillai"
+  name             : "Preeti Jayagopi Pillai"
   avatar           : "/images/prfl.png"
   bio              : "Applied AI R&D "
   location         : "Dallas, TX"
