--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
       url: "https://orcid.org/0000-0002-9007-3566"
     - label: "OpenReview"
       icon: "fab fa-fw fa-github"
-      url: "https://openreview:net/profile?id=~Preeti_J_Pillai1"
+      url: "https://openreview.net/profile?id=~Preeti_J_Pillai1"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/PreetiPillai14"
